Use options to determine whether to build Qt or GTK version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,22 +9,22 @@ find_package(ECM ${KF5_MIN_VERSION} REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
 set(QML_IMPORT_PATH "${QML_DIRS}" CACHE STRING "Qt Creator 4.1 extra qml import paths")
 
+option(ENABLE_QT "Build the Qt input module" ON)
+option(ENABLE_GTK "Build the GTK input module" ON)
+
 include(KDEInstallDirs)
 include(KDECMakeSettings)
 include(KDEFrameworkCompilerSettings NO_POLICY_SCOPE)
 include(FeatureSummary)
 
-find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS
-    Core
-    Gui
-)
+if (ENABLE_QT)
+    find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Core Gui)
     add_subdirectory(qt)
+endif()
 
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(GTK3 gtk+-3.0 IMPORTED_TARGET)
-
-
-if (TARGET PkgConfig::GTK3)
+if (ENABLE_GTK)
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(GTK3 gtk+-3.0 REQUIRED IMPORTED_TARGET)
     add_subdirectory(gtk)
 endif()
 
