set kcm category

--- a/kcm/kcm_kdesteamsettings.json
+++ b/kcm/kcm_kdesteamsettings.json
@@ -6,5 +6,5 @@
     },
     "X-DocPath": "kcontrol/kdesteam/index.html",
     "X-KDE-Weight": 60,
-    "X-KDE-System-Settings-Parent-Category": "appearance"
+    "X-KDE-System-Settings-Parent-Category": "input-devices"
 }
