Move GTK3 input method
We are going to add a GTK4 input method, so we should version the "gtk"
directory for GTK3.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ pkg_check_modules(GTK3 gtk+-3.0 IMPORTED_TARGET)
 add_subdirectory(src)
 
 if (TARGET PkgConfig::GTK3)
-    add_subdirectory(gtk)
+    add_subdirectory(gtk3)
 endif()
 
 feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)
