Add GTK4 input method
The code is slightly simplified by using boilerplate macros;
additionally, GTK4 dropped the custom input method module in favour of
the more standardised GIO extension points API.

On installation, we need to run:

    gio-querymodules LIBDIR/gtk-4.0/4.0.0/immodules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,11 +21,16 @@ find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTK3 gtk+-3.0 IMPORTED_TARGET)
+pkg_check_modules(GTK4 gtk4 IMPORTED_TARGET)
 
 add_subdirectory(src)
 
 if (TARGET PkgConfig::GTK3)
     add_subdirectory(gtk3)
+endif()
+
+if (TARGET PkgConfig::GTK4)
+    add_subdirectory(gtk4)
 endif()
 
 feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)
